# InFileNameWeTrust

./: .gitignore  README.md  default.env  environment.yml  pyproject.toml
src/infilenamewetrust/: README.md  azure_storage.py  base_storage.py  cython_fastencode.cp311-win_amd64.pyd  cython_fastencode.pyx  encoder.py  handler.py  ifnwt_manager.py  local_storage.py  main.py  main_azure.py  setup.py  storage.py  utils.py
src/infilenamewetrust/legacy/: main.py  storage.py  storage_old.py
tests/: test_infilenamewetrust.py
