[project]
name = "infilenamewetrust"
version = "0.1.0"
description = ""
authors = [
    {name = "Nicolas-Prevot",email = "nicolasprevot57@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "loguru (>=0.7.3,<0.8.0)"
]

[project.scripts]
encode = "infilenamewetrust.main:encode"
decode = "infilenamewetrust.main:decode"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
